--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html><html><head>
-    <script src="p5.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="./p5.play.js"></script>
-    <script src="./matter.js"></script>
-    <script src="Umbrella.js"></script>
-    
-    <link rel="stylesheet" type="text/css" href="style.css">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
     <meta charset="utf-8">
+    <title>Multiplayer Game</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+    <script src="p5.play.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
-      <script src="sketch.js"></script>
-      <script src="Drops.js"></script>
-  </body></html>
+    <script src="sketch.js"></script>
+  </body>
+</html>
